--- a/design/src/Test2.css
+++ b/design/src/Test2.css
@@ -140,3 +140,22 @@
     border-radius: 1vh;
     box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, .1);
 }
+
+.inputAddr {
+    width: 15vw;
+    height: 3vw;
+    border: none;
+    margin: 0.5vw;
+    border-radius: 1vh;
+    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, .1);
+}
+
+.AddrBtn {
+    height: 3vw;
+    border: none;
+    margin: 0.5vw 0.5vw 0.5vw 0;
+    border-radius: 1vh;
+    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, .1);
+    border: none;
+
+}
