--- a/views/index.ejs
+++ b/views/index.ejs
@@ -208,6 +208,22 @@
                                     <label class="form-check-label" for="inlineCheckbox2">소아과 보기</label>
                                 </div>
                             </div>
+                        </div>
+                    </fieldset>
+
+                    <fieldset class="form-group">
+                        <div class="row">
+                            <legend class="col-form-label col-sm-2 pt-0">주소 필터</legend>
+                            <div class="col-sm-8">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" name="inputFilter" type="radio" id="inlineCheckbox3" value="lo" required>
+                                    <label class="form-check-label" for="inlineCheckbox3">-로 단위</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" name="inputFilter" type="radio" id="inlineCheckbox4" value="gu">
+                                    <label class="form-check-label" for="inlineCheckbox4">-구 단위</label>
+                                </div>
+                            </div>
                             <div class="form-group col-sm-2">
                                 <button type="submit" class="d-inline btn btn-info">검색</button>
                             </div>
