--- a/views/index_admin.ejs
+++ b/views/index_admin.ejs
@@ -220,6 +220,13 @@
                                                 // 아래 코드는 지도 위의 마커를 제거하는 코드입니다
                                                 // marker.setMap(null);    
                                                 </script>
+                                                <br>
+                                                <div class="card">
+                                                    <div class="card-header">writer</div>
+                                                    <div class="card-body">
+                                                        <p class="card-text">댓글 내용</p>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
