--- a/design/src/Test2.css
+++ b/design/src/Test2.css
@@ -157,5 +157,20 @@
     border-radius: 1vh;
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, .1);
     border: none;
+}
 
+.DetailBtn {
+    border: none;
+    background-color: #ffffff;
+    color: #7093fc;
+    border-radius: 1vh;
+    box-shadow: 1px 1px 7px 1px rgba(0, 0, 0, .1);
+}
+
+.DetailBtn:hover {
+    border: none;
+    background-color: #ffffff;
+    color: #7093fc;
+    border-radius: 1vh;
+    box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, .1);
 }
